# django-pyc

./: .bandit  .flake8  .gitignore  .travis.yml  CHANGES.rst  MANIFEST.in  Pipfile  README.md  README.rst  dev-requirements.txt  manage.py  pylintrc  requirements.txt  setup.cfg  setup.py  tox.ini
.travis/: install.sh  script.sh
django_pyc/: tests.py
django_pyc/management/commands/: clearpyc.py  compilepyc.py
docs/: Makefile  commands.rst  commands.rts  conf.py  index.rst  installation.rst  license.rst  make.bat
pyc/: tests.py
pyc/management/commands/: clearpyc.py  compilepyc.py
test_project/: settings.py  urls.py  wsgi.py
