[metadata]
name = django-pyc
version = attr: django_pyc.VERSION
author = Piotr Roszatycki
author_email = piotr.roszatycki@gmail.com
home_page = https://github.com/dex4er/django-pyc
description = Manage .pyc files in Django project
long_description = file: README.rst
license = LGPL
license_file = LICENSE
platform = OS Independent
keywords = django pyc clean compile compileall
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Framework :: Django'

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.5
install_requires =
  django>=2.0

[options.packages.find]
exclude =
    test_project
