[metadata]
name = django-pyc
version = attr: django_pyc.VERSION
author = Piotr Roszatycki
author_email = piotr.roszatycki@gmail.com
home_page = https://github.com/dex4er/django-pyc
description = Manage .pyc files in Django project
long_description = file: README.rst
license = LGPL
license_file = LICENSE
platform = OS Independent
keywords = django pyc clean compile compileall
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Framework :: Django

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.5
install_requires =
    django>=2.0

[options.extras_require]
dev =
	docutils
	Pygments

[options.packages.find]
exclude =
    test_project

[bandit]
exclude = .venv
skips = B322

[check]
metadata = true
restructuredtext = true
strict = true

[doc8]
ignore-path = .git, .eggs, *.egg-info, .venv, __pycache__, tests/, docs/, build/, dist/

[flake8]
max-line-length = 120
exclude = .git, .eggs, *.egg-info, .venv, __pycache__, tests/, docs/, build/, dist/

[MASTER]
load-plugins = pylint_django

[pylint]
disable = duplicate-code, invalid-name, missing-docstring
min-public-methods = 0
max-line-length = 300
max-locals = 25
max-nested-blocks = 8
max-parents = 15
notes = FIXME, XXX

[tool:pytest]
DJANGO_SETTINGS_MODULE = test_project.settings
python_files = tests.py
