[metadata]
name = django-pyc
version = attr: django_pyc.VERSION
author = Piotr Roszatycki
author_email = piotr.roszatycki@gmail.com
home_page = https://github.com/dex4er/django-pyc
description = Manage .pyc files in Django project
long_description = file: README.rst
license = LGPL
license_file = LICENSE
platform = OS Independent
keywords = django pyc clean compile compileall
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Framework :: Django
    Framework :: Django :: 1.10
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2

[options]
zip_safe = False
include_package_data = True
packages =
    django_pyc
    django_pyc.management
    django_pyc.management.commands
setup_requires =
    setuptools >=30.3.0
install_requires =
    django

[options.extras_require]
dev =
    docutils
    Pygments

[bandit]
exclude = .venv
skips = B322

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[doc8]
ignore-path = .git, .eggs, *.egg-info, .venv, __pycache__, tests/, docs/, build/, dist/

[flake8]
max-line-length = 120
exclude = .git, .eggs, *.egg-info, .venv, __pycache__, tests/, docs/, build/, dist/

[MASTER]
load-plugins = pylint_django

[pylint]
disable = duplicate-code, invalid-name, missing-docstring
min-public-methods = 0
max-line-length = 300
max-locals = 25
max-nested-blocks = 8
max-parents = 15
notes = FIXME, XXX

[sdist]
formats = zip, gztar

[tool:pytest]
DJANGO_SETTINGS_MODULE = test_project.settings
python_files = tests.py
